Fix background contrast.

--- a/web/src/elements/Tabs.css
+++ b/web/src/elements/Tabs.css
@@ -15,6 +15,10 @@
     .pf-c-tabs .pf-c-tabs__list::before {
         border-color: transparent;
     }
+
+    .pf-c-tabs__link {
+        --pf-c-tabs__link--before--BorderRightWidth: 0;
+    }
 }
 
 .pf-c-tabs {
